@@ -3,7 +3,7 @@
 //
 // Browser widget for the Fast Light Tool Kit (FLTK).
 //
-// Copyright 1998-2005 by Bill Spitzak and others.
+// Copyright 1998-2007 by Bill Spitzak and others.
 //
 // This library is free software; you can redistribute it and/or
 // modify it under the terms of the GNU Library General Public
@@ -472,7 +472,7 @@ void Fl_Browser::show(int line) {
   if (t->flags & NOTDISPLAYED) {
     t->flags &= ~NOTDISPLAYED;
     full_height_ += item_height(t);
-    if (Fl_Browser_::displayed(t)) redraw_lines();
+    if (Fl_Browser_::displayed(t)) redraw();
   }
 }
 
@@ -481,7 +481,7 @@ void Fl_Browser::hide(int line) {
   if (!(t->flags & NOTDISPLAYED)) {
     full_height_ -= item_height(t);
     t->flags |= NOTDISPLAYED;
-    if (Fl_Browser_::displayed(t)) redraw_lines();
+    if (Fl_Browser_::displayed(t)) redraw();
   }
 }
 
